feat: Add methods to be compliant with RPC v0.8 (#556)
* feat: implement estimateMessageFee for L1 to L2 message transactions

* Added estimateMessageFee method to ReadProvider and its implementation in JsonRpcReadProvider.
* Introduced EstimateMessageFee and EstimateMessageFeeRequest models for handling fee estimation requests and responses.
* Updated documentation to reflect the new method and its status.
* Added integration tests to validate the functionality of estimateMessageFee, including success and error scenarios.

* feat: add getMessagesStatus method to ReadProvider

* Implemented getMessagesStatus method in ReadProvider and its corresponding implementation in JsonRpcReadProvider.
* Created GetMessagesStatus and related models for handling message status requests and responses.
* Updated documentation to include the new method and its status.
* Added integration tests to validate the functionality of getMessagesStatus, covering both success and error scenarios.

* fix rebase

* Fix rebase

* feat: add getStorageProof method to ReadProvider

* Implemented getStorageProof method in ReadProvider and its corresponding implementation in JsonRpcReadProvider.
* Created GetStorageProof and related models for handling storage proof requests and responses.
* Updated documentation to include the new method and its status.
* Added integration tests to validate the functionality of getStorageProof, covering both success and error scenarios.
* Refactored GetMessagesStatusRequest to use transactionHashes instead of messageHashes for consistency.

* typo

* feat: update Starknet provider to support new tracing methods

* Bumped JSON RPC version from 0.7.1 to 0.8.1 in documentation and README.
* Added support for new tracing methods: `starknet_traceTransaction`, `starknet_simulateTransactions`, and `starknet_traceBlockTransactions`.
* Implemented `TraceProvider` and `JsonRpcTraceProvider` classes for handling tracing functionalities.
* Created models for transaction traces

--- a/docs/packages/starknet-provider.mdx
+++ b/docs/packages/starknet-provider.mdx
@@ -15,7 +15,7 @@ Also check [WSS documentation](packages/starknet-provider-wss) for WebSocket sup
 
 ## Supported JSON RPC methods
 
-### Version: 0.7.1
+### Version: 0.8.1
 
 ### Read methods
 
@@ -44,6 +44,8 @@ jq .methods[].name ../starknet-specs/api/starknet_api_openrpc.json
 | starknet_call                            | ✅          |
 | starknet_estimateFee                     | ✅          |
 | starknet_estimateMessageFee              | ✅          |
+| starknet_getMessagesStatus               | ✅          |
+| starknet_getStorageProof                 | ✅          |
 | starknet_blockNumber                     | ✅          |
 | starknet_blockHashAndNumber              | ✅          |
 | starknet_chainId                         | ✅          |
@@ -65,3 +67,17 @@ jq .methods[].name ../starknet-specs/api/starknet_write_api.json
 | starknet_addDeclareTransaction       | ✅          |
 | starknet_addDeployAccountTransaction | ✅          |
 
+
+### Trace API Methods
+
+Name of methods have been extracted from [starknet-specs](https://github.com/starkware-libs/starknet-specs.git) with the following command:
+
+```bash
+jq .methods[].name ../starknet-specs/api/starknet_trace_api_openrpc.json
+```
+
+| Name                                 | Implemented |
+| ------------------------------------ | ----------- |
+| starknet_traceTransaction            | ✅          |
+| starknet_simulateTransactions        | ✅          |
+| starknet_traceBlockTransactions      | ✅          |
